--- a/Resources/views/Paper/testshowradar_v3.html.twig
+++ b/Resources/views/Paper/testshowradar_v3.html.twig
@@ -21,7 +21,8 @@
             {{ 'show_result_stats_html' | trans({}, 'messages') }}
         </a>
 
-    <span class="userresource" id="userresource" data-user="1,2" data-resource="1,2,3;6,7,8,9,10;11"></span>
+    <span class="userresource" id="userresource" data-user="1,2" data-resource="2,3,4;5,6,7,8,9;10"></span>
+    <!--<span class="userresource" id="userresource" data-user="1,2" data-resource="1,2,3;6,7,8,9,10;11"></span>-->
     <div class="containerradar" id="containerradar"><canvas id="radaranalytics" class="radarstat" height="350" width="300"></canvas></div>
         <div class="containerradardata" id="containerradardata"></div>
 
