--- a/Resources/views/Widget/statWidgetConfigure.html.twig
+++ b/Resources/views/Widget/statWidgetConfigure.html.twig
@@ -17,7 +17,7 @@
           novalidate
             >
         <div class="panel-body">
-
+            <h2>Choose users and resources</h2>
             <table class="table">
                 <tr id="pick-user-for-stats">
                     <td class="isel_label">{{ form.userlist.vars.label|trans({}, 'resource') }}{{ form_widget(form.userlist) }}</td>
@@ -42,7 +42,7 @@
 
         </div>
         <div class="panel-footer">
-            <button type="submit" class="btn btn-primary">{{ 'ok'|trans({}, 'platform') }}</button>
+            <button type="submit" class="btn btn-primary">{{ 'save'|trans({}, 'platform') }}</button>
             <a href="#">
                 <button type="button" class="btn btn-default claro-widget-form-cancel">{{ 'cancel'|trans({}, 'platform') }}</button>
             </a>
